--- a/css/dogTab.css
+++ b/css/dogTab.css
@@ -22,7 +22,7 @@
     height: 300px;
     max-width: 300px;
     padding: 10px;
-    border: 1px solid black;
+    border: 3px solid black;
     border-radius: 50%;
 }
 
@@ -106,4 +106,11 @@
 }
 .buttons-small:active{
     background-color: rgb(133, 133, 133);
+}
+.buttonsSelection{
+    display: flex;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    gap: 10%;
 }
